// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message render "should correctly render needRefining" 1`] = `
<div
  className="metadata-view-header-text-container"
>
  <div
    className="message-graphic"
  >
    <MetadataEmptyState
      className="metadata-empty-state-graphic"
    />
  </div>
  <div
    className="message-header-text"
  >
    <FormattedMessage
      defaultMessage="Too many results"
      id="boxui.metadataView.needRefiningHeaderText"
      values={
        Object {
          "upperFileLimit": "100,000",
        }
      }
    />
  </div>
  <div
    className="message-subtitle-text"
  >
    <FormattedMessage
      defaultMessage="Please use filters to refine your results."
      id="boxui.metadataView.needRefiningSubtitleText"
    />
  </div>
</div>
`;

exports[`Message render "should correctly render noAccessForQuery" 1`] = `
<div
  className="metadata-view-header-text-container"
>
  <div
    className="message-graphic"
  >
    <FolderEmptyState
      className="folder-empty-state-graphic"
    />
  </div>
  <div
    className="message-header-text"
  >
    <FormattedMessage
      defaultMessage="No results"
      id="boxui.metadataView.noResultsForQueryHeaderText"
      values={
        Object {
          "upperFileLimit": "100,000",
        }
      }
    />
  </div>
  <div
    className="message-subtitle-text"
  >
    <FormattedMessage
      defaultMessage="You do not have access to any files that match your query. Please use filters to modify your query."
      id="boxui.metadataView.noResultsForQuerySubtitleText"
    />
  </div>
</div>
`;

exports[`Message render "should correctly render noAccessForTemplate" 1`] = `
<div
  className="metadata-view-header-text-container"
>
  <div
    className="message-graphic"
  >
    <FolderEmptyState
      className="folder-empty-state-graphic"
    />
  </div>
  <div
    className="message-header-text"
  >
    <FormattedMessage
      defaultMessage="No results"
      id="boxui.metadataView.noResultsForTemplateHeaderText"
      values={
        Object {
          "upperFileLimit": "100,000",
        }
      }
    />
  </div>
  <div
    className="message-subtitle-text"
  >
    <FormattedMessage
      defaultMessage="You do not have access to any files that match this template."
      id="boxui.metadataView.noResultsForTemplateSubtitleText"
    />
  </div>
</div>
`;

exports[`Message render "should correctly render tooManyResults" 1`] = `
<div
  className="metadata-view-header-text-container"
>
  <div
    className="message-graphic"
  >
    <MetadataEmptyState
      className="metadata-empty-state-graphic"
    />
  </div>
  <div
    className="message-header-text"
  >
    <FormattedMessage
      defaultMessage="Over {upperFileLimit} files match this template"
      id="boxui.metadataView.tooManyResultsHeaderText"
      values={
        Object {
          "upperFileLimit": "100,000",
        }
      }
    />
  </div>
  <div
    className="message-subtitle-text"
  >
    <FormattedMessage
      defaultMessage="Result sets of this size are not currently supported in Box."
      id="boxui.metadataView.tooManyResultsSubtitleText"
    />
  </div>
</div>
`;
